@@ -1,3 +1,8 @@
+2004-12-15  Sushma Rai <rsushma@novell.com>
+	
+	* calendar/e-cal-backend-exchange-calendar.c:
+	Fixed several memory leaks.
+
 2004-12-14  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* lib/e2k-path.c : Moved this from evolution/e-util as this is no
